# Basboosa

./: Basboosa.cabal  Blockchain.chain  CHANGELOG.md  README.md  SignedTransaction.tx  address.addr  privatekey.prv
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-F5F1.tmp  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: Basboosa-0.1.0.0-inplace.conf  package.cache
dist-newstyle/tmp/src-3320/electrum-mnemonic-0.1.3/: CHANGELOG  Tests.hs
dist-newstyle/tmp/src-3320/electrum-mnemonic-0.1.3/Data/Mnemonic/: Electrum.hs
dist-newstyle/tmp/src-3320/electrum-mnemonic-0.1.3/Data/Mnemonic/Electrum/: Types.hs
dist-newstyle/tmp/src-3320/electrum-mnemonic-0.1.3/Data/Mnemonic/Electrum/WordList/: Poetic.hs
src/: Network.hs  PubKey.hs
src/Basboosa/: Chain.hs  Ledger.hs  Network.hs  PubKey.hs  Types.hs
