cabal-version:      2.4
name:               Basboosa
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable Basboosa
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base 
					, Basboosa
    hs-source-dirs:   app
    default-language: Haskell2010
	
library
  exposed-modules: 	Basboosa.Types,
					Basboosa.PubKey,
					Basboosa.Ledger,
                    Basboosa.Chain,
                    Basboosa.Network
  -- other-modules:
  -- build-depends:
  build-depends: 	base,
					free,
					bytestring,
					binary,
					cryptonite,
					electrum-mnemonic,
					memory,
					bytestring,
					utf8-string,
					split,
					cipher-aes,
					directory,
          http-types,
          wai,
          warp,
		  http-client,
		  text,
		  http-conduit,
		  deepseq,
					time
  hs-source-dirs: 	src
  default-language: Haskell2010

